--- a/book-service/book-service/src/main/resources/application.properties
+++ b/book-service/book-service/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-spring.application.name=book-service
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.jpa.show-sql=true
+
+spring.jpa.database=h2
+spring.jpa.hibernate.ddl-auto=create-drop
