--- a/eureka-service/eureka-service/src/main/resources/application.properties
+++ b/eureka-service/eureka-service/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-spring.application.name=eureka-service
+server.port=8761
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
