--- a/library-service/library-service/src/main/resources/application.properties
+++ b/library-service/library-service/src/main/resources/application.properties
@@ -1,4 +1,8 @@
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.jpa.show-sql=true
 
+spring.jpa.database=h2
 spring.jpa.hibernate.ddl-auto=create-drop
 
 server.port=8080
