--- a/api-gateway/api-gateway/src/main/resources/application.yaml
+++ b/api-gateway/api-gateway/src/main/resources/application.yaml
@@ -14,6 +14,9 @@ spring:
             predicates:
               - Path=/v1/library/**
 
+  zipkin:
+    base-url: http://localhost:9411
+
 server:
   port: 8888
 
