--- a/library-service/library-service/src/main/resources/application.properties
+++ b/library-service/library-service/src/main/resources/application.properties
@@ -9,3 +9,5 @@ server.port=8080
 spring.application.name=library-service
 eureka.instance.prefer-ip-address=true
 eureka.client.service-url.default-zone=${EUREKA_URI:http://localhost:8761:eureka}
+
+spring.zipkin.base-url=http://localhost:9411
