--- a/library-service/library-service/src/main/resources/application.properties
+++ b/library-service/library-service/src/main/resources/application.properties
@@ -9,5 +9,13 @@ server.port=8080
 spring.application.name=library-service
 eureka.instance.prefer-ip-address=true
 eureka.client.service-url.default-zone=${EUREKA_URI:http://localhost:8761:eureka}
+spring.profiles.active=dev
+
+# spring.cloud.config.enabled=true
 
 spring.zipkin.base-url=http://localhost:9411
+
+spring.config.import=optional:configserver:http://localhost:8888/
+spring.cloud.config.uri=optional:configserver:http://localhost:8888/
+
+management.endpoints.web.exposure.include=*
